syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "hello/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {
		option (google.api.http) = {
			post: "v1/user/create"
			body: "*"
		};
	}
	rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty){
		option (google.api.http) = {
			post: "v1/user/update"
			body: "*"
		};
	}
	rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty){
		option (google.api.http) = {
			post: "v1/user/delete/{id}"
			body: "*"
		};
	}
	rpc GetUser (GetUserRequest) returns (GetUserReply) {
		option (google.api.http) = {
			get: "v1/user/{id}"
		};
	}
	rpc ListUser (ListUserRequest) returns (ListUserReply) {
		option (google.api.http) = {
			get: "v1/users"
		};
	}
}

message UserEntity {
	int64 id = 1;
	string name = 2;
	int32 age = 3;
	string mobile = 4;
	string created_at = 5;
}

message CreateUserRequest {
	UserEntity user = 1;
}
message CreateUserReply {
	int64 id = 1;
}

message UpdateUserRequest {
	UserEntity user = 1;
}

message DeleteUserRequest {
	int64 id = 1;
}
message DeleteUserReply {}

message GetUserRequest {
	int64 id = 1;
}
message GetUserReply {
	UserEntity user = 1;
}

message ListUserRequest {
	int64 page = 1;
	int64 page_size = 2;
	string name = 3;
	string mobile = 4;
	string created_start = 5;
	string created_end = 6;
}
message ListUserReply {
	int64 total = 1;
	repeated UserEntity users = 2;
}
